# hierarchical-gnn-for-hls

./: .gitignore  README.md  requirements.txt
GNNg/data/datasets/: graph.py  run.py
GNNg/data/raw/: GNNnp_pred_latency.csv  GNNnp_pred_resource.csv  GNNp_pred_latency.csv  GNNp_pred_resource.csv  source_label.csv
GNNg/src/: config.py  model.py
GNNnp/data/datasets/: dataset.py  graph.py  run.py  utils.py
GNNnp/data/raw/: source_label.csv
GNNnp/src/: data.py  main.py  model.pth
GNNp/data/datasets/: dataset.py  graph.py  run.py  tmp.c  tmp.ll
GNNp/data/raw/: source_label.csv
GNNp/src/: parameter.py  train.py  utils.py
benchmark/: README.md  auto_directive.py  run_script.py
benchmark/kernel4graph/atax/: atax.c  atax_lp1.c  atax_lp2.c  atax_lp3.c  atax_lp4.c
benchmark/kernel4hls/atax/: atax.c  atax_lp1.c  atax_lp2.c  atax_lp3.c  atax_lp4.c  prj_config.txt  sub_prj_config.txt
benchmark/kernel4hls/bicg/: bicg.c  bicg_lp1.c  bicg_lp2.c  bicg_lp3.c  bicg_lp4.c  prj_config.txt  sub_prj_config.txt
benchmark/kernel4hls/gemm/: gemm.c  gemm_lp1.c  gemm_lp2.c  prj_config.txt  sub_prj_config.txt
benchmark/kernel4hls/gesummv/: gesummv.c  gesummv_lp1.c  gesummv_lp2.c  gesummv_lp3.c  prj_config.txt  sub_prj_config.txt
benchmark/kernel4hls/k2mm/: k2mm.c  k2mm_lp1.c  k2mm_lp2.c  k2mm_lp3.c  k2mm_lp4.c  k2mm_lp5.c  k2mm_lp6.c  prj_config.txt  sub_prj_config.txt
benchmark/kernel4hls/k3mm/: k3mm.c  k3mm_lp1.c  (+7 more)
utils/llvm-pass/: CMakeLists.txt  README.md
utils/llvm-pass/loop_II/: CMakeLists.txt  loop_II.cpp
utils/visulization/: atax.c  vis.html  visualization.py
(+98 files in other folders)
